package wr1ttenyu.f1nal.study.designpattern.pattern23.observer;

public interface Observer {

    void update(float temperature, float pressure, float humidity);
}
